# Annualreport_tools

./: .gitignore  .pre-commit-config.yaml  1.report_link_crawler.py  2.pdf_batch_converter.py  3.text_analysis.py  README.md  TODO.md  config.yaml.example  mda_extractor.py  pyproject.toml  requirements-dev.txt  requirements.txt  text_analysis_universal.py
.claude/: doc-registry.json
.github/workflows/: ci.yml
annual_report_mda/: __init__.py  config_manager.py  data_manager.py  db.py  scorer.py  section_splitter.py  sqlite_db.py  strategies.py  text_loader.py  utils.py
annual_report_mda/adaptive/: __init__.py  failure_patterns.py  few_shot.py  self_refine.py  strategy_weights.py
annual_report_mda/llm/: __init__.py  client.py  prompts.py
annual_report_mda/llm/providers/: base.py  (+5 more)
data/: schema.json
docs/: README.zh.md  annual_report_mda_extractor_spec.md  convert_only_mode_maintenance.md  convert_only_mode_spec.md  convert_only_mode_user_guide.md  dependency_graph.md  feature_list.md  pdf_batch_converter_manual.md  preview_architecture.md  system_architecture.md  system_architecture_flow.html  technical_debt.md  text_analysis_review.md  webui_user_manual.md
plans/: 1.1_unified_configuration_spec.md  1.1_unified_configuration_spec_audit.md  2.1_golden_dataset_spec.md  2.2_extraction_upgrade_spec.md  2.3_quality_scoring_loop.md  2.5.4_llm_adaptive_learning_spec.md  M1_verification_report.md  M2_verification_report.md  bulk-queue-management.md  crawler-date-optimization.md  downstream_analysis_proposal.md  dual-database-architecture.md  dual-database-architecture_spec.md  dual-database-architecture_spec_draft.md  duckdb_core_spec.md  duckdb_core_spec_audit.md  fix-converter-datasource-mismatch.md  fix-task-mgmt-ui-misleading.md  m2.5_mda_extractor_enhancement_spec.md  plan_skill_v4_audit_and_guide.md  streamlit-webui-implementation.md  streamlit-webui-research.md  webui-crawler-logic-check.md  webui-crawler-logic-check_spec.md  webui-crawler-logic-check_spec_draft.md  webui-enhancement.md
scripts/: auto_improve.py  backfill_quality_score.py  download_samples.py  evaluate_extraction.py  fix_golden_offsets.py  llm_annotate.py  migrate_duckdb_to_sqlite.py  migrate_excel_to_duckdb.py  migrate_mda_schema.py  select_golden_samples.py
tests/: conftest.py  test_adaptive.py  test_duckdb_core.py  test_llm_client.py  test_logging.py  test_m2_verification.py  test_mda_extractor.py  test_mda_integration.py  test_scorer.py  test_section_splitter.py  test_strategies.py  test_yoy_validator.py
webui/: app.py  requirements.txt
webui/.streamlit/: config.toml
webui/components/: __init__.py  config_editor.py  db_utils.py  pid_manager.py  task_runner.py
webui/pages/: 1_监控仪表盘.py  2_配置管理.py  3_任务管理.py  4_年报浏览器.py
(+5 files in other folders)
